package com.attendance.auth.entity;

public enum Role {
    ADMIN,
    EMPLOYEE
}
